2009-05-04  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fixed "Bug 500001 – Auto
	  XML comment (///) for struct grabs params and returns from
	  following function".

2009-05-04  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fixed "Bug 499819 -
	  "true." or "false." doesn't trigger code completion".

2009-05-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/MemberCompletionData.cs: Fix duplicate filtering, so
	  that unnecessary "overloads" don't show up.

2009-04-30  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs: Remove unnecessary compiler
	  params parsing.

2009-04-28  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/EventCreationCompletionData.cs: Fixed/Improved the
	  create event handler feature.

2009-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs: Use correct environment for
	  building the project, according to the target runtime.

2009-04-27  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.csproj:
	* Gui/NewOverrideCompletionData.cs: Fixed "Bug 497991 -
	  Completion of "overriding" an interface member results in a
	  call to base".

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.addin.xml: Changed copyright tag.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* AssemblyInfo.cs: Changed assembly info.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs: "overriding" interface
	  members is now public.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fixed 'Bug 495275 -
	  override completion popup no longer includes unimplemented
	  members from interfaces'.

	* Parser/NRefactoryParser.cs: 

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs: fixed "Bug 497829 - MD cannot
	  open file due to NullReferenceException in C# binding".
